fixed map issues

--- a/running/web/index.html
+++ b/running/web/index.html
@@ -29,12 +29,16 @@
   <script>
     // Forzar renderer HTML (mejor para google_maps_flutter_web)
     window.flutterConfiguration = { renderer: "html" };
-    window.initGm = () => {};
+    
+    // Callback para saber cuándo está lista la API de Maps
+    function initGm() {
+      window.mapsApiLoaded = true;
+    }
   </script>
 
-  <!-- Google Maps con async y loading=async para quitar el warning -->
-  <script async
-          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7p9SqQYqJ87vWdBXa_lJKUIxL91h79s4&v=weekly&libraries=geometry,places&loading=async&callback=initGm">
+  <!-- Google Maps con async y defer para no bloquear el renderizado -->
+  <script async defer
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD7p9SqQYqJ87vWdBXa_lJKUIxL91h79s4&v=weekly&libraries=geometry,places&callback=initGm">
   </script>
 </head>
 <body>
