feat: update APK download path and add binary file
- Added territory-run.apk binary to web/downloads directory
- Updated download link to point to new file location

--- a/web/index.html
+++ b/web/index.html
@@ -294,7 +294,7 @@
     <section id="download" class="glass-section glass" style="text-align:center;">
       <h2>Comienza tu aventura</h2>
       <p>Descarga Territory Run y transforma tus carreras en conquistas épicas.</p>
-      <a href="territory-run-beta.apk" download class="btn btn-primary"><i class="fas fa-download"></i> Descargar APK</a>
+      <a href="web/downloads/territory-run.apk" download class="btn btn-primary"><i class="fas fa-download"></i> Descargar APK</a>
     </section>
 
     <footer>© 2025 Territory Run · Corre · Conquista · Comparte</footer>
